--- a/waybar/style.css
+++ b/waybar/style.css
@@ -1,163 +1,43 @@
 * {
-    border: none;
-    border-radius: 0px;
-    font-family: JetBrainsMono;
-    font-size: 20px;
-    min-height: 0;
+	background-color: #141415;
+	color: #fab387;
+
+	border: none;
+	border-radius: 0;
+	min-height: 0;
+	font-family: JetBrainsMono;
+	font-size: 20px;
 }
 
-window#waybar {
-    background-color: transparent;
-    color: #ffffff;
-    transition-property: background-color;
-    transition-duration: .5s;
+.modules-left {
+	margin-left: 12px;
 }
 
-window#waybar.hidden {
-    opacity: 0.2;
+.modules-right {
+	margin-right: 20px;
 }
 
 #workspaces button {
-    color: #ffffff;
-    border-radius: 20px;
+	all: initial;
+	padding: 4 8px;
+	margin: 0 1.5px;
+	min-width: 9px;
 }
 
-/* https://github.com/Alexays/Waybar/wiki/FAQ#the-workspace-buttons-have-a-strange-hover-effect */
-#workspaces button:hover {
-    background: lightblue;
-    color: black;
+#workspaces button.empty {
+	opacity: 0.5;
 }
 
-#workspaces button.active {
-    border-color: #4c7899;
-}
-
-#workspaces button.active:hover {
-    color: black;
-}
-
-#workspaces button.urgent {
-    background-color: #eb4d4b;
-}
-
-#clock,
-#battery,
 #cpu,
-#memory,
-#disk,
-#temperature,
-#backlight,
+#battery,
 #network,
 #pulseaudio,
-#custom-media,
-#custom-notification,
-#custom-launcher,
-#custom-power,
-#custom-layout,
-#custom-updater,
-#custom-snip,
-#taskbar,
-#tray,
-#mode,
-#idle_inhibitor,
-#mpd {
-    padding: 0 10px;
-    color: #ffffff;
-}
-
-#window,
-#workspaces {
-    margin: 0px 4px;
-}
-
-/* If workspaces is the leftmost module, omit left margin */
-.modules-left > widget:first-child > #workspaces {
-    margin-left: 0px;
-}
-
-/* If workspaces is the rightmost module, omit right margin */
-.modules-right > widget:last-child > #workspaces {
-    margin-right: 0px;
-}
-
 #clock {
-    color: #ffffff;
+	min-width: 12px;
+	padding: 0 4px;
+	margin: 0 7.5px;
 }
 
-#battery {
-    color: #ffffff;
+tooltip {
+	padding: 2px;
 }
-
-@keyframes blink {
-    to {
-        background-color: #ffffff;
-        color: #000000;
-    }
-}
-
-#battery.critical:not(.charging) {
-    color: #ffffff;
-    animation-name: blink;
-    animation-duration: 0.5s;
-    animation-timing-function: linear;
-    animation-iteration-count: infinite;
-    animation-direction: alternate;
-}
-
-label:focus {
-    background-color: #000000;
-}
-
-#cpu {
-    color: #ffffff;
-}
-
-#memory {
-    color: #ffffff;
-}
-
-#pulseaudio {
-    color: #ffffff;
-}
-
-#pulseaudio.muted {
-    color: red;
-}
-
-#custom-media {
-    background-color: #8EC5FC;
-    background-image: linear-gradient(62deg, #8EC5FC 0%, #E0C3FC 100%);
-    color: black;
-    border-radius: 20px;
-    margin-right: 5px;
-    margin-left: 5px;
-}
-
-#custom-media.custom-spotify {
-    background-color: #8EC5FC;
-    background-image: linear-gradient(62deg, #8EC5FC 0%, #E0C3FC 100%);
-    color: black;
-    border-radius: 20px;
-    margin-right: 5px;
-}
-
-#custom-media.custom-vlc {
-    background-color: #8EC5FC;
-    background-image: linear-gradient(62deg, #8EC5FC 0%, #E0C3FC 100%);
-    color: black;
-    border-radius: 20px;
-    margin-right: 5px;
-}
-
-#custom-launcher{
-    background-color: #171717;
-    font-size: 24px;
-    border-radius: 20px 0px 0px 0px;
-    margin-left: 5px;
-}
-
-#taskbar{
-    background-color: #171717;
-    border-radius: 0px 20px 20px 0px;
-}
-
