fix: updated theme and removed unused config

--- a/waybar/style.css
+++ b/waybar/style.css
@@ -1,6 +1,6 @@
 * {
-	background-color: #141415;
-	color: #fab387;
+	background-color: #1e1e2e;
+	color: #d8dee9;
 
 	border: none;
 	border-radius: 0;
